cmake_minimum_required(VERSION 3.10)
project(postgres C)

set(CMAKE_C_STANDARD 99)

add_definitions("-Wall -Wmissing-prototypes -Wpointer-arith -Wdeclaration-after-statement -Wendif-labels -Wmissing-format-attribute -Wformat-security -fno-strict-aliasing -fwrapv -fexcess-precision=standard -Wno-format-truncation -Wno-stringop-truncation -O0 -g")
#add_definitions(-D_GNU_SOURCE)
add_definitions(-DDLSUFFIX='.so')

include_directories(src/include)
link_directories(src/common)
link_directories(src/port)

FILE(GLOB pgbackend_src
        "src/backend/access/brin/brin.c"
        "src/backend/access/brin/brin_pageops.c"
        "src/backend/access/brin/brin_revmap.c"
        "src/backend/access/brin/brin_tuple.c"
        "src/backend/access/brin/brin_xlog.c"
        "src/backend/access/brin/brin_minmax.c"
        "src/backend/access/brin/brin_inclusion.c"
        "src/backend/access/brin/brin_validate.c"
        "src/backend/access/common/attmap.c"
        "src/backend/access/common/bufmask.c"
        "src/backend/access/common/detoast.c"
        "src/backend/access/common/heaptuple.c"
        "src/backend/access/common/indextuple.c"
        "src/backend/access/common/printsimple.c"
        "src/backend/access/common/printtup.c"
        "src/backend/access/common/relation.c"
        "src/backend/access/common/reloptions.c"
        "src/backend/access/common/scankey.c"
        "src/backend/access/common/session.c"
        "src/backend/access/common/toast_internals.c"
        "src/backend/access/common/tupconvert.c"
        "src/backend/access/common/tupdesc.c"
        "src/backend/access/gin/*.c"
        "src/backend/access/gist/*.c"
        "src/backend/access/spgist/*.c"
        "src/backend/access/hash/hash.c"
        "src/backend/access/hash/hashfunc.c"
        "src/backend/access/hash/hashinsert.c"
        "src/backend/access/hash/hashovfl.c"
        "src/backend/access/hash/hashpage.c"
        "src/backend/access/hash/hashsearch.c"
        "src/backend/access/hash/hashsort.c"
        "src/backend/access/hash/hashutil.c"
        "src/backend/access/hash/hashvalidate.c"
        "src/backend/access/hash/hash_xlog.c"
        "src/backend/access/heap/heapam.c"
        "src/backend/access/heap/heaptoast.c"
        "src/backend/access/heap/hio.c"
        "src/backend/access/heap/pruneheap.c"
        "src/backend/access/heap/rewriteheap.c"
        "src/backend/access/heap/syncscan.c"
        "src/backend/access/heap/tuptoaster.c"
        "src/backend/access/heap/visibilitymap.c"
        "src/backend/access/heap/heapam_handler.c"
        "src/backend/access/heap/heapam_visibility.c"
        "src/backend/access/heap/vacuumlazy.c"
        "src/backend/access/index/amapi.c"
        "src/backend/access/index/amvalidate.c"
        "src/backend/access/index/genam.c"
        "src/backend/access/index/indexam.c"
        "src/backend/access/nbtree/*.c"
        "src/backend/access/rmgrdesc/brindesc.c"
        "src/backend/access/rmgrdesc/clogdesc.c"
        "src/backend/access/rmgrdesc/committsdesc.c"
        "src/backend/access/rmgrdesc/dbasedesc.c"
        "src/backend/access/rmgrdesc/genericdesc.c"
        "src/backend/access/rmgrdesc/gindesc.c"
        "src/backend/access/rmgrdesc/gistdesc.c"
        "src/backend/access/rmgrdesc/hashdesc.c"
        "src/backend/access/rmgrdesc/heapdesc.c"
        "src/backend/access/rmgrdesc/logicalmsgdesc.c"
        "src/backend/access/rmgrdesc/mxactdesc.c"
        "src/backend/access/rmgrdesc/nbtdesc.c"
        "src/backend/access/rmgrdesc/relmapdesc.c"
        "src/backend/access/rmgrdesc/replorigindesc.c"
        "src/backend/access/rmgrdesc/seqdesc.c"
        "src/backend/access/rmgrdesc/smgrdesc.c"
        "src/backend/access/rmgrdesc/spgdesc.c"
        "src/backend/access/rmgrdesc/standbydesc.c"
        "src/backend/access/rmgrdesc/tblspcdesc.c"
        "src/backend/access/rmgrdesc/xactdesc.c"
        "src/backend/access/rmgrdesc/xlogdesc.c"
        "src/backend/access/tablesample/bernoulli.c"
        "src/backend/access/tablesample/system.c"
        "src/backend/access/tablesample/tablesample.c"
        "src/backend/access/transam/clog.c"
        "src/backend/access/transam/commit_ts.c"
        "src/backend/access/transam/generic_xlog.c"
        "src/backend/access/transam/multixact.c"
        "src/backend/access/transam/parallel.c"
        "src/backend/access/transam/rmgr.c"
        "src/backend/access/transam/slru.c"
        "src/backend/access/transam/subtrans.c"
        "src/backend/access/transam/timeline.c"
        "src/backend/access/transam/transam.c"
        "src/backend/access/transam/twophase.c"
        "src/backend/access/transam/twophase_rmgr.c"
        "src/backend/access/transam/varsup.c"
        "src/backend/access/transam/xact.c"
        "src/backend/access/transam/xlog.c"
        "src/backend/access/transam/xlogarchive.c"
        "src/backend/access/transam/xlogfuncs.c"
        "src/backend/access/transam/xloginsert.c"
        "src/backend/access/transam/xlogreader.c"
        "src/backend/access/transam/xlogutils.c"
        "src/backend/access/table/*.c"
        "src/backend/bootstrap/bootparse.c"
        "src/backend/bootstrap/bootstrap.c"
        "src/backend/catalog/catalog.c"
        "src/backend/catalog/dependency.c"
        "src/backend/catalog/heap.c"
        "src/backend/catalog/index.c"
        "src/backend/catalog/indexing.c"
        "src/backend/catalog/namespace.c"
        "src/backend/catalog/aclchk.c"
        "src/backend/catalog/objectaccess.c"
        "src/backend/catalog/objectaddress.c"
        "src/backend/catalog/partition.c"
        "src/backend/catalog/pg_aggregate.c"
        "src/backend/catalog/pg_cast.c"
        "src/backend/catalog/pg_collation.c"
        "src/backend/catalog/pg_constraint.c"
        "src/backend/catalog/pg_conversion.c"
        "src/backend/catalog/pg_depend.c"
        "src/backend/catalog/pg_enum.c"
        "src/backend/catalog/pg_inherits.c"
        "src/backend/catalog/pg_largeobject.c"
        "src/backend/catalog/pg_namespace.c"
        "src/backend/catalog/pg_operator.c"
        "src/backend/catalog/pg_proc.c"
        "src/backend/catalog/pg_publication.c"
        "src/backend/catalog/pg_range.c"
        "src/backend/catalog/pg_db_role_setting.c"
        "src/backend/catalog/pg_shdepend.c"
        "src/backend/catalog/pg_subscription.c"
        "src/backend/catalog/pg_type.c"
        "src/backend/catalog/storage.c"
        "src/backend/catalog/toasting.c"
        "src/backend/parser/analyze.c"
        "src/backend/parser/gram.c"
        "src/backend/parser/scan.c"
        "src/backend/parser/parser.c"
        "src/backend/parser/parse_agg.c"
        "src/backend/parser/parse_clause.c"
        "src/backend/parser/parse_coerce.c"
        "src/backend/parser/parse_collate.c"
        "src/backend/parser/parse_cte.c"
        "src/backend/parser/parse_enr.c"
        "src/backend/parser/parse_expr.c"
        "src/backend/parser/parse_func.c"
        "src/backend/parser/parse_node.c"
        "src/backend/parser/parse_oper.c"
        "src/backend/parser/parse_param.c"
        "src/backend/parser/parse_relation.c"
        "src/backend/parser/parse_target.c"
        "src/backend/parser/parse_type.c"
        "src/backend/parser/parse_utilcmd.c"
        "src/backend/parser/scansup.c"
        "src/backend/commands/amcmds.c"
        "src/backend/commands/aggregatecmds.c"
        "src/backend/commands/alter.c"
        "src/backend/commands/analyze.c"
        "src/backend/commands/async.c"
        "src/backend/commands/cluster.c"
        "src/backend/commands/comment.c"
        "src/backend/commands/collationcmds.c"
        "src/backend/commands/constraint.c"
        "src/backend/commands/conversioncmds.c"
        "src/backend/commands/copy.c"
        "src/backend/commands/createas.c"
        "src/backend/commands/dbcommands.c"
        "src/backend/commands/define.c"
        "src/backend/commands/discard.c"
        "src/backend/commands/dropcmds.c"
        "src/backend/commands/event_trigger.c"
        "src/backend/commands/explain.c"
        "src/backend/commands/extension.c"
        "src/backend/commands/foreigncmds.c"
        "src/backend/commands/functioncmds.c"
        "src/backend/commands/indexcmds.c"
        "src/backend/commands/lockcmds.c"
        "src/backend/commands/matview.c"
        "src/backend/commands/operatorcmds.c"
        "src/backend/commands/opclasscmds.c"
        "src/backend/commands/policy.c"
        "src/backend/commands/portalcmds.c"
        "src/backend/commands/prepare.c"
        "src/backend/commands/proclang.c"
        "src/backend/commands/publicationcmds.c"
        "src/backend/commands/schemacmds.c"
        "src/backend/commands/seclabel.c"
        "src/backend/commands/sequence.c"
        "src/backend/commands/statscmds.c"
        "src/backend/commands/subscriptioncmds.c"
        "src/backend/commands/tablecmds.c"
        "src/backend/commands/tablespace.c"
        "src/backend/commands/trigger.c"
        "src/backend/commands/tsearchcmds.c"
        "src/backend/commands/typecmds.c"
        "src/backend/commands/user.c"
        "src/backend/commands/vacuum.c"
        "src/backend/commands/vacuumlazy.c"
        "src/backend/commands/variable.c"
        "src/backend/commands/view.c"
        "src/backend/executor/*.c"
        
        "src/backend/jit/*.c"
        "src/backend/foreign/foreign.c"
        "src/backend/lib/binaryheap.c"
        "src/backend/lib/bipartite_match.c"
        "src/backend/lib/hyperloglog.c"
        "src/backend/lib/ilist.c"
        "src/backend/lib/knapsack.c"
        "src/backend/lib/pairingheap.c"
        "src/backend/lib/rbtree.c"
        "src/backend/lib/stringinfo.c"
        "src/backend/libpq/be-fsstubs.c"
        "src/backend/libpq/be-secure.c"
        "src/backend/libpq/auth.c"
        "src/backend/libpq/crypt.c"
        "src/backend/libpq/hba.c"
        "src/backend/libpq/ifaddr.c"
        "src/backend/libpq/pqcomm.c"
        "src/backend/libpq/pqformat.c"
        "src/backend/libpq/pqmq.c"
        "src/backend/libpq/pqsignal.c"
        "src/backend/libpq/auth-scram.c"
        "src/backend/main/main.c"
        "src/backend/nodes/nodeFuncs.c"
        "src/backend/nodes/nodes.c"
        "src/backend/nodes/list.c"
        "src/backend/nodes/bitmapset.c"
        "src/backend/nodes/tidbitmap.c"
        "src/backend/nodes/copyfuncs.c"
        "src/backend/nodes/equalfuncs.c"
        "src/backend/nodes/extensible.c"
        "src/backend/nodes/makefuncs.c"
        "src/backend/nodes/outfuncs.c"
        "src/backend/nodes/readfuncs.c"
        "src/backend/nodes/print.c"
        "src/backend/nodes/read.c"
        "src/backend/nodes/params.c"
        "src/backend/nodes/value.c"
        "src/backend/optimizer/geqo/geqo_copy.c"
        "src/backend/optimizer/geqo/geqo_eval.c"
        "src/backend/optimizer/geqo/geqo_main.c"
        "src/backend/optimizer/geqo/geqo_misc.c"
        "src/backend/optimizer/geqo/geqo_mutation.c"
        "src/backend/optimizer/geqo/geqo_pool.c"
        "src/backend/optimizer/geqo/geqo_random.c"
        "src/backend/optimizer/geqo/geqo_recombination.c"
        "src/backend/optimizer/geqo/geqo_selection.c"
        "src/backend/optimizer/geqo/geqo_erx.c"
        "src/backend/optimizer/geqo/geqo_pmx.c"
        "src/backend/optimizer/geqo/geqo_cx.c"
        "src/backend/optimizer/geqo/geqo_px.c"
        "src/backend/optimizer/geqo/geqo_ox1.c"
        "src/backend/optimizer/geqo/geqo_ox2.c"
        "src/backend/optimizer/path/allpaths.c"
        "src/backend/optimizer/path/clausesel.c"
        "src/backend/optimizer/path/costsize.c"
        "src/backend/optimizer/path/equivclass.c"
        "src/backend/optimizer/path/indxpath.c"
        "src/backend/optimizer/path/joinpath.c"
        "src/backend/optimizer/path/joinrels.c"
        "src/backend/optimizer/path/pathkeys.c"
        "src/backend/optimizer/path/tidpath.c"
        "src/backend/optimizer/plan/analyzejoins.c"
        "src/backend/optimizer/plan/createplan.c"
        "src/backend/optimizer/plan/initsplan.c"
        "src/backend/optimizer/plan/planagg.c"
        "src/backend/optimizer/plan/planmain.c"
        "src/backend/optimizer/plan/planner.c"
        "src/backend/optimizer/plan/setrefs.c"
        "src/backend/optimizer/plan/subselect.c"
        "src/backend/optimizer/prep/prepjointree.c"
        "src/backend/optimizer/prep/prepqual.c"
        "src/backend/optimizer/prep/preptlist.c"
        "src/backend/optimizer/prep/prepunion.c"
        "src/backend/optimizer/util/*.c"
        "src/backend/partitioning/*.c"
        "src/backend/port/atomics.c"
        "src/backend/port/pg_sema.c"
        "src/backend/port/pg_shmem.c"
        "src/backend/postmaster/autovacuum.c"
        "src/backend/postmaster/bgworker.c"
        "src/backend/postmaster/bgwriter.c"
        "src/backend/postmaster/checkpointer.c"
        "src/backend/postmaster/fork_process.c"
        "src/backend/postmaster/interrupt.c"
        "src/backend/postmaster/pgarch.c"
        "src/backend/postmaster/pgstat.c"
        "src/backend/postmaster/postmaster.c"
        "src/backend/postmaster/startup.c"
        "src/backend/postmaster/syslogger.c"
        "src/backend/postmaster/walwriter.c"
        "src/backend/regex/regcomp.c"
        "src/backend/regex/regerror.c"
        "src/backend/regex/regexec.c"
        "src/backend/regex/regfree.c"
        "src/backend/regex/regprefix.c"
        "src/backend/regex/regexport.c"
        "src/backend/replication/logical/decode.c"
        "src/backend/replication/logical/launcher.c"
        "src/backend/replication/logical/logical.c"
        "src/backend/replication/logical/logicalfuncs.c"
        "src/backend/replication/logical/message.c"
        "src/backend/replication/logical/origin.c"
        "src/backend/replication/logical/proto.c"
        "src/backend/replication/logical/relation.c"
        "src/backend/replication/logical/reorderbuffer.c"
        "src/backend/replication/logical/snapbuild.c"
        "src/backend/replication/logical/tablesync.c"
        "src/backend/replication/logical/worker.c"
        "src/backend/replication/walsender.c"
        "src/backend/replication/walreceiverfuncs.c"
        "src/backend/replication/walreceiver.c"
        "src/backend/replication/basebackup.c"
        "src/backend/replication/backup_manifest.c"
        "src/backend/replication/repl_gram.c"
        "src/backend/replication/slot.c"
        "src/backend/replication/slotfuncs.c"
        "src/backend/replication/syncrep.c"
        "src/backend/replication/syncrep_gram.c"
       
        "src/backend/rewrite/rewriteRemove.c"
        "src/backend/rewrite/rewriteDefine.c"
        "src/backend/rewrite/rewriteHandler.c"
        "src/backend/rewrite/rewriteManip.c"
        "src/backend/rewrite/rewriteSupport.c"
        "src/backend/rewrite/rowsecurity.c"
        "src/backend/statistics/extended_stats.c"
        "src/backend/statistics/dependencies.c"
        "src/backend/statistics/mvdistinct.c"
        "src/backend/statistics/mcv.c"
        "src/backend/storage/buffer/buf_table.c"
        "src/backend/storage/buffer/buf_init.c"
        "src/backend/storage/buffer/bufmgr.c"
        "src/backend/storage/buffer/freelist.c"
        "src/backend/storage/buffer/localbuf.c"
        "src/backend/storage/file/fd.c"
        "src/backend/storage/file/buffile.c"
        "src/backend/storage/file/copydir.c"
        "src/backend/storage/file/reinit.c"
        "src/backend/storage/file/sharedfileset.c"
        "src/backend/storage/freespace/freespace.c"
        "src/backend/storage/freespace/fsmpage.c"
        "src/backend/storage/freespace/indexfsm.c"
        "src/backend/storage/ipc/*.c"
        
        "src/backend/storage/large_object/inv_api.c"
        "src/backend/storage/lmgr/lmgr.c"
        "src/backend/storage/lmgr/lock.c"
        "src/backend/storage/lmgr/proc.c"
        "src/backend/storage/lmgr/deadlock.c"
        "src/backend/storage/lmgr/lwlock.c"
        "src/backend/storage/lmgr/lwlocknames.c"
        "src/backend/storage/lmgr/spin.c"
        "src/backend/storage/lmgr/s_lock.c"
        "src/backend/storage/lmgr/predicate.c"
        "src/backend/storage/lmgr/condition_variable.c"
        "src/backend/storage/page/bufpage.c"
        "src/backend/storage/page/checksum.c"
        "src/backend/storage/page/itemptr.c"
        "src/backend/storage/smgr/md.c"
        "src/backend/storage/smgr/smgr.c"
        "src/backend/storage/smgr/smgrtype.c"
        "src/backend/storage/sync/*.c"
        "src/backend/tcop/cmdtag.c"
        "src/backend/tcop/dest.c"
        "src/backend/tcop/fastpath.c"
        "src/backend/tcop/postgres.c"
        "src/backend/tcop/pquery.c"
        "src/backend/tcop/utility.c"
        "src/backend/tsearch/ts_locale.c"
        "src/backend/tsearch/ts_parse.c"
        "src/backend/tsearch/wparser.c"
        "src/backend/tsearch/wparser_def.c"
        "src/backend/tsearch/dict.c"
        "src/backend/tsearch/dict_simple.c"
        "src/backend/tsearch/dict_synonym.c"
        "src/backend/tsearch/dict_thesaurus.c"
        "src/backend/tsearch/dict_ispell.c"
        "src/backend/tsearch/regis.c"
        "src/backend/tsearch/spell.c"
        "src/backend/tsearch/to_tsany.c"
        "src/backend/tsearch/ts_selfuncs.c"
        "src/backend/tsearch/ts_typanalyze.c"
        "src/backend/tsearch/ts_utils.c"
        
        "src/backend/utils/adt/jsonb_util.c"
        "src/backend/utils/adt/tsvector.c"
        "src/backend/utils/adt/numutils.c"
        
        "src/backend/utils/adt/trigfuncs.c"
        "src/backend/utils/adt/jsonfuncs.c"
        "src/backend/utils/adt/domains.c"
        "src/backend/utils/adt/rangetypes_typanalyze.c"
        "src/backend/utils/adt/json.c"
        "src/backend/utils/adt/tsquery.c"
        "src/backend/utils/adt/tsvector_op.c"
        "src/backend/utils/adt/tsrank.c"
        "src/backend/utils/adt/mac.c"
        "src/backend/utils/adt/array_expanded.c"
        "src/backend/utils/adt/jsonpath.c"
        "src/backend/utils/adt/mac8.c"
        "src/backend/utils/adt/array_userfuncs.c"
        "src/backend/utils/adt/network.c"
        "src/backend/utils/adt/tsquery_gist.c"
        "src/backend/utils/adt/tsquery_rewrite.c"
        "src/backend/utils/adt/tsginidx.c"
        "src/backend/utils/adt/timestamp.c"
        "src/backend/utils/adt/ruleutils.c"
        "src/backend/utils/adt/rangetypes_spgist.c"
        "src/backend/utils/adt/quote.c"
        "src/backend/utils/adt/genfile.c"
        "src/backend/utils/adt/rangetypes.c"
        "src/backend/utils/adt/orderedsetaggs.c"
        "src/backend/utils/adt/rangetypes_gist.c"
        "src/backend/utils/adt/network_spgist.c"
        "src/backend/utils/adt/datum.c"
        "src/backend/utils/adt/regproc.c"
        "src/backend/utils/adt/lockfuncs.c"
        "src/backend/utils/adt/format_type.c"
        "src/backend/utils/adt/arrayfuncs.c"
        "src/backend/utils/adt/ri_triggers.c"
        "src/backend/utils/adt/arrayutils.c"
        "src/backend/utils/adt/inet_net_pton.c"
        "src/backend/utils/adt/jsonpath_gram.c"
        "src/backend/utils/adt/int8.c"
        "src/backend/utils/adt/tsquery_cleanup.c"
        "src/backend/utils/adt/enum.c"
        "src/backend/utils/adt/network_gist.c"
        "src/backend/utils/adt/varchar.c"
        "src/backend/utils/adt/txid.c"
        "src/backend/utils/adt/formatting.c"
        "src/backend/utils/adt/tsquery_op.c"
        "src/backend/utils/adt/tsgistidx.c"
        "src/backend/utils/adt/pseudotypes.c"
        "src/backend/utils/adt/expandedrecord.c"
        "src/backend/utils/adt/cash.c"
        "src/backend/utils/adt/pg_lsn.c"
        "src/backend/utils/adt/jsonb.c"
        "src/backend/utils/adt/tsvector_parser.c"
        "src/backend/utils/adt/like.c"
        "src/backend/utils/adt/geo_spgist.c"
        "src/backend/utils/adt/regexp.c"
        "src/backend/utils/adt/int.c"
        "src/backend/utils/adt/encode.c"
        "src/backend/utils/adt/partitionfuncs.c"
        "src/backend/utils/adt/expandeddatum.c"
        "src/backend/utils/adt/network_selfuncs.c"
        "src/backend/utils/adt/array_selfuncs.c"
        "src/backend/utils/adt/float.c"
        "src/backend/utils/adt/bool.c"
        "src/backend/utils/adt/pg_locale.c"
        "src/backend/utils/adt/rowtypes.c"
        
        "src/backend/utils/adt/jsonb_gin.c"
        "src/backend/utils/adt/datetime.c"
        "src/backend/utils/adt/date.c"
        "src/backend/utils/adt/like_support.c"
        "src/backend/utils/adt/pgstatfuncs.c"
        "src/backend/utils/adt/jsonb_op.c"
        "src/backend/utils/adt/varbit.c"
        "src/backend/utils/adt/tsquery_util.c"
        "src/backend/utils/adt/array_typanalyze.c"
        "src/backend/utils/adt/geo_selfuncs.c"
        "src/backend/utils/adt/ascii.c"
        "src/backend/utils/adt/oid.c"
        "src/backend/utils/adt/inet_cidr_ntop.c"
        "src/backend/utils/adt/oracle_compat.c"
        "src/backend/utils/adt/acl.c"
        
        "src/backend/utils/adt/geo_ops.c"
        "src/backend/utils/adt/amutils.c"
        "src/backend/utils/adt/jsonpath_exec.c"
        "src/backend/utils/adt/uuid.c"
        "src/backend/utils/adt/name.c"
        "src/backend/utils/adt/selfuncs.c"
        "src/backend/utils/adt/rangetypes_selfuncs.c"
        "src/backend/utils/adt/misc.c"
        "src/backend/utils/adt/char.c"
        "src/backend/utils/adt/numeric.c"
        "src/backend/utils/adt/tid.c"
        "src/backend/utils/adt/pg_upgrade_support.c"
        "src/backend/utils/adt/dbsize.c"
        "src/backend/utils/adt/cryptohashes.c"
        "src/backend/utils/adt/varlena.c"
        "src/backend/utils/adt/version.c"
        "src/backend/utils/adt/windowfuncs.c"
        "src/backend/utils/adt/xid.c"
         "src/backend/utils/adt/xid8funcs.c"
        "src/backend/utils/adt/xml.c"
        
        "src/backend/utils/cache/*.c"
        
        "src/backend/utils/error/assert.c"
        "src/backend/utils/error/elog.c"
        "src/backend/utils/fmgr/dfmgr.c"
        "src/backend/utils/fmgr/fmgr.c"
        "src/backend/utils/fmgr/funcapi.c"
        "src/backend/utils/hash/dynahash.c"
        "src/backend/utils/hash/hashfn.c"
        "src/backend/utils/hash/pg_crc.c"
        "src/backend/utils/init/globals.c"
        "src/backend/utils/init/miscinit.c"
        "src/backend/utils/init/postinit.c"
        "src/backend/utils/mb/encnames.c"
        "src/backend/utils/mb/conv.c"
        "src/backend/utils/mb/mbutils.c"
        "src/backend/utils/mb/stringinfo_mb.c"
        "src/backend/utils/mb/wchar.c"
        "src/backend/utils/mb/wstrcmp.c"
        "src/backend/utils/mb/wstrncmp.c"
        "src/backend/utils/misc/backend_random.c"
        "src/backend/utils/misc/guc.c"
        "src/backend/utils/misc/help_config.c"
        "src/backend/utils/misc/pg_config.c"
        "src/backend/utils/misc/pg_controldata.c"
        "src/backend/utils/misc/pg_rusage.c"
        "src/backend/utils/misc/ps_status.c"
        "src/backend/utils/misc/queryenvironment.c"
        "src/backend/utils/misc/rls.c"
        "src/backend/utils/misc/sampling.c"
        "src/backend/utils/misc/superuser.c"
        "src/backend/utils/misc/timeout.c"
        "src/backend/utils/misc/tzparser.c"
        "src/backend/utils/mmgr/aset.c"
        "src/backend/utils/mmgr/dsa.c"
        "src/backend/utils/mmgr/freepage.c"
        "src/backend/utils/mmgr/mcxt.c"
        "src/backend/utils/mmgr/memdebug.c"
        "src/backend/utils/mmgr/portalmem.c"
        "src/backend/utils/mmgr/slab.c"
        "src/backend/utils/resowner/resowner.c"
        "src/backend/utils/sort/logtape.c"
        "src/backend/utils/sort/sharedtuplestore.c"
        "src/backend/utils/sort/sortsupport.c"
        "src/backend/utils/sort/tuplesort.c"
        "src/backend/utils/sort/tuplestore.c"
        "src/backend/utils/time/combocid.c"
        "src/backend/utils/time/tqual.c"
        "src/backend/utils/time/snapmgr.c"
        "src/backend/utils/mmgr/*.c"
        "src/backend/utils/fmgrtab.c"
        "src/timezone/localtime.c"
        "src/timezone/strftime.c"
        "src/timezone/pgtz.c"
        "src/backend/lib/*.c"
        )

add_executable(postgres ${pgbackend_src})
target_link_libraries(postgres  pgport_srv pgcommon_srv pthread  rt crypt dl m)
